# libSnotra

./: .gitignore  LICENSE  Makefile  README.md  config.status  configure.ac
src/: Makefile  Makefile.am  Snotra.c  Snotra.h
src/.deps/: Snotra.Po
