  GNU nano 2.2.6                     File: Makefile.am                                                  

# what flags you want to pass to the C compiler & linker
AM_CXXFLAGS = --pedantic -Wall -O2
#LDFLAGS =
# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
#bin_PROGRAMS = 

lib_LIBRARIES = libSnotra.a
libSnotra_a_SOURCES = \
        Snotra.c \
        Snotra.h

include_HEADERS = Snotra.h





